--- a/ts-demo/public/index.html
+++ b/ts-demo/public/index.html
@@ -12,6 +12,14 @@
       <strong>We're sorry but ts-demo doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
+    <div id='media'>
+      <audio class="pre_load_music" preload="auto" src="../assets/material/media/wind.ogg"></audio>
+      <audio class="pre_load_music" preload="auto" src="../assets/material/media/boommusic3.mp3"></audio>
+      <audio class="pre_load_music" preload="auto" src="../assets/material/media/blast0.mp3"></audio>
+      <audio class="pre_load_music" preload="auto" src="../assets/material/media/planeshoot0.mp3"></audio>
+      <audio class="pre_load_music" preload="auto" src="../assets/material/media/showbomb.mp3"></audio>
+      <audio id='touch' class="pre_load_music" preload="auto" src="../assets/material/media/touch.mp3"></audio>
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
